<resources>
    <string name="app_name">Paatu</string>
    <string name="menu_home">Home</string>
    <string name="menu_myMusic">My Music</string>
    <string name="my_music">My Music</string>
    <string name="offline_music">Offline Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like">Like</string>
    <string name="playlist">Playlist</string>
    <string name="download">Download</string>
    <string name="song_info">Song Info</string>
    <string name="more">More</string>
    <string name="up_next">Up Next</string>
    <string name="queue">Queue</string>
</resources>