<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lay_musicExpanded"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    app:behavior_peekHeight="80dp"
    style="?attr/bottomSheetStyle"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <include
        android:id="@+id/lay_musicCollapsed"
        layout="@layout/music_player_collapsed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tv_songTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay_musicCollapsed"
        app:layout_constraintVertical_bias=".05" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/dp_250"
        android:layout_height="@dimen/dp_250"
        android:scaleType="fitXY"
        android:src="@drawable/astronaut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_songTitle"
        app:layout_constraintVertical_bias=".05" />


    <TextView
        android:id="@+id/tv_startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_logo"
        app:layout_constraintHorizontal_bias=".8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintVertical_bias=".05" />

    <SeekBar
        android:id="@+id/seek_duration"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:orientation="horizontal"
        android:progress="10"
        android:progressTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="@id/iv_logo"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintVertical_bias=".05" />

    <TextView
        android:id="@+id/tv_endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintStart_toEndOf="@id/iv_logo"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintVertical_bias=".05" />

    <LinearLayout
        android:id="@+id/ll_musicControl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_endTime"
        app:layout_constraintStart_toEndOf="@id/tv_startTime"
        app:layout_constraintTop_toBottomOf="@id/seek_duration"
        app:layout_constraintVertical_bias=".05">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_shuffle_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_skip_previous_24" />

        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_weight="1"
            android:src="@drawable/play_button" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_skip_next_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_repeat_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_musicOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:background="@color/grey"
        android:padding="@dimen/dp_15"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_musicControl">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_outline_thumb_up_24"
            android:text="@string/like"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_baseline_playlist_add_24"
            android:text="@string/playlist"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_outline_download_for_offline_24"
            android:text="@string/download"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_outline_info_24"
            android:text="@string/song_info"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_baseline_more_vert_24"
            android:text="@string/more"
            android:textAlignment="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_upNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:text="@string/up_next"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_musicOptions" />

    <TextView
        android:id="@+id/tv_queue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableTint="@android:color/holo_red_dark"
        android:text="@string/queue"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_musicOptions" />

    <com.gauravk.audiovisualizer.visualizer.BlastVisualizer
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/audv_blast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintTop_toBottomOf="@id/tv_queue"
        custom:layout_constraintVertical_bias="1"
        custom:avDensity="0.5"
        custom:avType="outline"
        custom:avWidth="@dimen/dp_5"
        custom:avColor="@color/av_dark_blue"
        custom:avSpeed="normal"/>

</androidx.constraintlayout.widget.ConstraintLayout>